# pool

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  methods.cpp  methods.h  origin.h  origin.ui  origin.ui.autosave  run_massage.py  runner.py  ui_mainwindow.h
hdr/: cross_message.h  fast_words.h  ftree.h  manager.h  methods.h  mruby_runner.h  pool_tool.h  qt_headers.h  thread_vesita.h  vesita.h  wopol.h
src/: cross_message.cpp  fast_words.cpp  ftree.cpp  main.cpp  methods.cpp  mruby_runner.cpp  pool_tool.cpp  thread_vesita.cpp  vesita.cpp  wopol.cpp
ssc/: pool.qml  token_block.qml  word_line.qml
